--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@ header {
   display: flex;
   align-self: center;
   justify-content: center;
+  align-content: center;
+  margin: auto;
   padding: 1rem;
 }
 
